# Transformer-from-scratch

./: .gitignore  README.md  dataset.py  inference.ipynb  main.py  model.py  pyproject.toml  train.py
