[tool.poetry]
name = "transformer-from-scratch"
version = "0.1.0"
description = ""
authors = ["Vadym <vadymdanylchuk04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
numpy = "^2.1.2"
pandas = "^2.2.3"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
jupyter = "^1.1.1"
datasets = "^3.0.1"
tokenizers = "^0.20.1"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
